# Integrated_Chatbot_face_Recognition

./: .env  CMakeLists.txt  README (1).md  README.md  Readme.text  package.xml  requirements.txt
launch/: integrated_chatbot.launch  integrated_chatbot_solid.launch  integrated_chatbot_solid_together.launch
scripts/: camera_node.py  config_manager.py  conversation_manager.py  face_recognizer.py  gemini_handler.py  integrated_chatbot_node.py  main.py  main_launch_together.py  mainlaunchtogether.py  voice_interface.py
vision_chatbot_pub_sub/: CMakeLists.txt  Readme.text  package.xml
vision_chatbot_pub_sub/config/: settings.yaml
vision_chatbot_pub_sub/launch/: vision_chatbot.launch  vision_chatbot_solid.launch
vision_chatbot_pub_sub/scripts/: main.py  realsense.py  utils.py  vision_chatbot_node.py  vision_module.py  voice_module.py
