<?xml version="1.0"?>
<package format="2">
  <name>integrated_chatbot</name>
  <version>1.0.0</version>
  <description>Integrated face recognition and Arabic voice chatbot</description>

  <maintainer email="philomath@example.com">Philomath</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>python3-pip</exec_depend>
  <exec_depend>python3-speechrecognition</exec_depend>
  <exec_depend>python3-gtts</exec_depend>
  <exec_depend>python3-pydub</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-onnxruntime</exec_depend>
  <exec_depend>python3-arabic-reshaper</exec_depend>
  <exec_depend>python3-python-bidi</exec_depend>
</package>
